@@ -32,6 +32,7 @@
 - added: `GROUP(flags, fn)` alias for `F.group()`
 - added: `F.cache.set2()` it creates a persistent cache (persistent items are stored in a file)
 - added: new View Engine command `@{'%config'}` which reads a value from config directly
+- added: `F.config['allow-filter-errors']` for filtering network unhandled errors
 
 - updated: (IMPORTANT) packages compress/decompress function supports streaming data
 - updated: (IMPORTANT) `NOSQL().backup()` !!! was changed !!!!
